[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Images/Enemies/AlienSprites/alienPink.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/Enemies/AlienSprites/alienPink_jump.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Map/Elements/raygunPurpleBig.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Enemies/AlienSprites/alienPink_walk1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/Enemies/AlienSprites/alienPink_walk2.png" type="Texture" id=5]
[ext_resource path="res://Scripts/EnemyManager.gd" type="Script" id=6]
[ext_resource path="res://Game/Scenes/LaserC.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Sounds/Sfx/Game/laser8.ogg" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Shoot",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 27.2929
height = 23.8309

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 177.988, 42.7958 )

[node name="EnemyA0" type="KinematicBody2D" groups=[
"Enemigos",
]]
script = ExtResource( 6 )
my_laser = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8.98106 )
shape = SubResource( 2 )

[node name="Arma" type="Sprite" parent="."]
visible = false
position = Vector2( 37.1702, 1.10956 )
scale = Vector2( 0.6, 0.6 )
z_index = 2
texture = ExtResource( 3 )

[node name="PosShootLeft" type="Position2D" parent="."]
position = Vector2( -33.7965, 1.75241 )

[node name="PosShootRight" type="Position2D" parent="."]
position = Vector2( 33.2958, 3.00413 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="SfxShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
